--- a/src/bib.bib
+++ b/src/bib.bib
@@ -3757,7 +3757,7 @@ OPTurl = "http://www.sciencedirect.com/science/article/B6WHY-4DD1P3K-M7/2/b559e1
 title = "Some conservation issues for the dynamical cores of {NWP} and climate models",
 journal = "J. Comput. Phys.",
 volume = "227",
-pages = "3715 - 3730",
+pages = "3715-3730",
 year = "2008",
 author = "J. Thuburn"
 }
@@ -8096,7 +8096,7 @@ doi = {10.1175/JCLI-D-17-0838.1}
 
 @article{GetAl2018MWR,
 author = {Gross, Markus and Wan, Hui and Rasch, Philip J. and Caldwell, Peter M. and Williamson, David L. and Klocke, Daniel and Jablonowski, Christiane and Thatcher, Diana R. and Wood, Nigel and Cullen, Mike and Beare, Bob and Willett, Martin and Lemarié, Florian and Blayo, Eric and Malardel, Sylvie and Termonia, Piet and Gassmann, Almut and Lauritzen, Peter H. and Johansen, Hans and Zarzycki, Colin M. and Sakaguchi, Koichi and Leung, Ruby},
-title = {Physics–Dynamics Coupling in weather, climate and Earth system models: Challenges and recent progress},
+title = {Physics-Dynamics Coupling in weather, climate and Earth system models: Challenges and recent progress},
 journal = mwr,
 volume = {146},
 pages = {3505-3544},
