--- a/src/energy.tex
+++ b/src/energy.tex
@@ -216,7 +216,7 @@ Here we focus on versions of the Community Atmosphere Model (CAM) that use the s
 
 The dynamical core usually has inherent or specified filters to control spurious noise near the grid scale which will lead to energy dissipation \citep{T2008JCP,JW2010LNCSE}. Similarly models often have sponge layers to control the solution near the top of the model that may be a sink of TE. There are examples of numerical discretizations of the adiabatic frictionless equations motion that are designed so that TE is conserved in the absence of time-truncation and filtering errors \citep[e.g., ][]{ER2017GMD,MC2013QJRMS}, e.g., mimetic spectral-element discretizations such as the one used in the horizontal in CAM-SE \citep{T2011LNCSEb}. These provide consistency between the discrete momentum and thermodynamic equations leading to global conservation associated with the conversion of potential to kinetic energy. In spectral transform models it is customary to add the energy change due to explicit diffusion on momentum back as heating (referred to as frictional heating), so that the diffusion of momentum does not affect the TE budget \citep[see, e.g., p.71 in ][]{CAM5}. This is also done in CAM-SE \citep{LetAl2018JAMES}. 
 
-The purpose of this paper is to provide a detailed global TE analysis of CAM. We assess TE errors due to various steps in the model algorithms. The paper is outlined as follows. In section \ref{sec:methods} the continuous TE formulas are given and a detailed description of spurious TE sources/sinks that can occur in a model as a whole, and the associated diagnostics used to perform the detailed TE analysis, are defined. In section \ref{sec:results} the model is run in various configuration to assess their effects on TE conservation. This includes various physics-dynamics coupling experiments leading to a rather detailed discussion of mass budget closure. We also investigate the effect of using a limiter in the vertical remapping of momentum, assess energy discrepancy errors and impacts on TE of simplifying surface conditions and dry atmosphere experiments. The paper ends with conclusions.
+The purpose of this paper is to provide a detailed global TE analysis of CAM. We assess TE errors due to various steps in the model algorithms. The paper is outlined as follows. In section \ref{sec:methods} the continuous TE formulas are given and a detailed description of spurious TE sources/sinks that can occur in a model as a whole, and the associated diagnostics used to perform the TE analysis, are defined. In section \ref{sec:results} the model is run in various configurations to assess their effects on TE conservation. This includes various physics-dynamics coupling experiments leading to a rather detailed discussion of mass budget closure. We also investigate the effect of using a limiter in the vertical remapping of momentum, assess energy discrepancy errors and impacts on TE of simplifying surface conditions and dry atmosphere experiments. The paper ends with conclusions.
 
 
 %For example, the discrete TE consistent with the dynamical core may differ from the one used in physics or,  even worse, the TE that the continuous equations of motion conserve is different between the dynamical core and physics.\\
@@ -242,7 +242,7 @@ E_p=K+c_p^{(d)}T.
 \end{equation}
 In a moist atmosphere, however, there are several definitions of TE used in the literature related to what heat capacity is used for water vapor and whether or not condensates are accounted for in the energy equation. To explain the details of that we focus on the energy equation for CAM-SE.
 
-CAM-SE is formulated using a terrain-following hybrid-sigma vertical coordinate $\eta$ but the coordinate levels are defined in terms of dry air mass ($M^{(d)}$) instead of total air mass; $\eta^{(d)}$ \citep[see ][ for details]{LetAl2018JAMES}. In such a coordinate system it is convenient to define the tracer state in terms of a dry mixing ratio instead of moist mixing ratio
+CAM-SE is formulated using a terrain-following hybrid-sigma vertical coordinate $\eta$ but the coordinate levels are defined in terms of dry air mass per unit area ($M^{(d)}$) instead of total air mass; $\eta^{(d)}$ \citep[see ][ for details]{LetAl2018JAMES}. In such a coordinate system it is convenient to define the tracer state in terms of a dry mixing ratio instead of moist mixing ratio
 \begin{equation}
 m^{(\ell)}\equiv \frac{\rho^{(\ell)}}{\rho^{(d)}}, \text{ where }\ell=`wv`,`cl`,`ci`,`rn`,`sw`,\label{eq:mx}
 \end{equation}
@@ -272,11 +272,11 @@ In a weather/climate model TE conservation errors can appear in many places thro
 \item {\em{Parameterization errors}}: Individual parameterizations may not have a closed energy budget. CAM parameterizations are required to have a closed energy budget under the assumption that pressure remains constant during the computation of the subgrid-scale parameterization tendencies. In other words, the TE change in the column is exactly balanced by the net sources/sinks given by the fluxes through the column. 
 \item {\em{Pressure work}}: That said, if parameterizations update specific humidity then the surface pressure changes (e.g., moisture entering or leaving the column). In that case the pressure changes which, in turn, changes TE. This is referred to as {\em{pressure work}} \citep[section 3.1.8 in ][]{CAM5}.
 \item {\em{Continuous TE formula discrepancy}}:  If the continuous equations of motion for the dynamical core conserve a TE different from the one used in the parameterizations then an energy inconsistency is present in the system as a whole. This is the case with the new version of CAM-SE that conserves a TE that is more accurate and comprehensive than that used in the CAM physics package as discussed above. As also noted above, this mismatch arose from the evolutionary nature of the model development and not by deliberate design.
-\item {\em{Dynamical core errors}}: Energy conservation errors in the dynamical core, not related to physics-dynamics coupling errors, can arise in multiple parts of the algorithms used to solve the equations of motion. For dynamical cores employing filtering \citep[e.g., limiters in flux operators ][]{L2004MWR} and/or possessing inherent damping which controls small scales, it is hard to isolate their energy dissipation from other errors in the discretization. If a hyperviscosity term or some other diffusion is added to the momentum equation, then one can diagnose the local energy dissipation from such damping and add a corresponding heating to balance it. There may also be energy loss from viscosity applied to other variables such a temperature or pressure which is harder to compensate. Here is a beak-down relevant to CAM-SE using a floating Lagrangian vertical coordinate:
+\item {\em{Dynamical core errors}}: Energy conservation errors in the dynamical core, not related to physics-dynamics coupling errors, can arise in multiple parts of the algorithms used to solve the equations of motion. For dynamical cores employing filtering \citep[e.g., limiters in flux operators ][]{L2004MWR} and/or possessing inherent damping which controls small scales, it is hard to isolate their energy dissipation from other errors in the discretization. If a hyperviscosity term or some other diffusion is added to the momentum equation, then one can diagnose the local energy dissipation from such damping and add a corresponding heating to balance it (frictional heating). There may also be energy loss from viscosity applied to other variables such a temperature or pressure which is harder to compensate. Here is a beak-down relevant to CAM-SE using a floating Lagrangian vertical coordinate:
 \begin{itemize}
 \item Horizontal inviscid dynamics: Energy errors resulting from solving the inviscid, adiabatic equations of motion.
 \item Hyperviscosity: Filtering errors.
-\item Vertical remapping: The vertical remapping algorithm from Lagrangian to pressure surfaces does not conserve TE.
+\item Vertical remapping: The vertical remapping algorithm from Lagrangian to Eulerian reference surfaces does not conserve TE.
 \item Near round-off negative values of water vapor which are filled to a minimal value without compensation.
 \end{itemize}
 \item {\em{Physics-dynamics coupling (PDC)}}: Assume that physics computes a tendency. Usually the tendency (forcing) is passed to the dynamical core which is responsible for adding the tendencies to the state. PDC energy errors can be split into three types:
@@ -293,13 +293,13 @@ The discrete global averages $\gi{(\cdot)}$ are computed consistent with the dis
 \begin{equation}
 \partial \gi{E}\equiv \frac{d\gi{E}}{dt}.
 \end{equation}
-By computing the global TE averages $\gi{E}$ at appropriate places in the model algorithms, we can directly compute $\partial \gi{E}$ due to various processes (such as viscosity, vertical remapping, physics-dynamics coupling, pressure work, etc.) by differencing $\gi{E}$ from after and before the algorithm takes place. This has been implemented using CAM history infrastructure by computing column integrals of energy at various places in CAM and outputting the 2D energy fields. CAM history internally handles accumulation and averaging in time at each horizontal grid point. The global averages are computed externally from the grid point vertical integrals on the history files. The places in CAM where we compute/capture the grid point vertical integral $E$ are named using three letters where the first letter refers to whether the vertical integral is performed in physics (`p') or in the dynamical core (`d'). The trailing to letters refer to the specific location in dynamics or physics. For example, 'BP' refers to `Before Physics' and `AP' to `After Physics'; the associated total energies are denoted ${E}_{pBP}$ and ${E}_{pAP}$, respectively. The TE tendency from the parameterizations is the difference between ${E}_{pBP}$ and ${E}_{pAP}$ divided by the time-step. The terms and tendency are then averaged globally externally to the model. The pseudo-code in Figure \ref{fig:dAD} defines the acronyms in terms of where in the CAM-SE algorithm the TE vertical integrals are computed and output. For details on the CAM-SE algorithm please see \citet{LetAl2018JAMES}.
+By computing the global TE averages $\gi{E}$ at appropriate places in the model algorithms, we can directly compute $\partial \gi{E}$ due to various processes (such as viscosity, vertical remapping, physics-dynamics coupling, pressure work, etc.) by differencing $\gi{E}$ from after and before the algorithm takes place. This has been implemented using CAM history infrastructure by computing column integrals of energy at various places in CAM and outputting the 2D energy fields. CAM history internally handles accumulation and averaging in time at each horizontal grid point. The global averages are computed externally from the grid point vertical integrals on the history files (stored in double precision). The places in CAM where we compute/capture the grid point vertical integral $E$ are named using three letters where the first letter refers to whether the vertical integral is performed in physics (`p') or in the dynamical core (`d'). The trailing to letters refer to the specific location in dynamics or physics. For example, 'BP' refers to `Before Physics' and `AP' to `After Physics'; the associated total energies are denoted ${E}_{pBP}$ and ${E}_{pAP}$, respectively. The TE tendency from the parameterizations is the difference between ${E}_{pBP}$ and ${E}_{pAP}$ divided by the time-step. The terms and tendency are then averaged globally externally to the model. The pseudo-code in Figure \ref{fig:dAD} defines the acronyms in terms of where in the CAM-SE algorithm the TE vertical integrals are computed and output. For details on the CAM-SE algorithm please see \citet{LetAl2018JAMES}.
 
 Before defining the individual terms in detail we briefly review the model time stepping sequence starting with the physics component as illustrated in Figure \ref{fig:dAD}. The energy fixer is applied first to compensate for the spurious net energy change from all components introduced during the previous time step. We will describe this in more detail after the various sources and sinks are elucidated. The parameterizations are applied next and are required to be energy conserving. They update the state and accumulate the total physics tendency (forcing). At this stage the state is saved for use in the energy fixer in the next time step. Any changes in the global average energy after this are spurious and are compensated by the fixer. The parameterizations update the water vapor but not the moist pressure, implying a non-physical change in the dry mass of the atmosphere. The dry mass correction corrects the dry mass back to its proper value.
 
-The forcing (physics tendency) from the parameterizations is passed to the dynamical core. If the physics and dynamics operate on different grids, the forcing is remapped here. The dynamics operates on a shorter time step the the physics and is sub-stepped. The remapped forcing is applied to the dynamics state, saved from the end of the previous dynamics step, using either {\em{state-updating}}, {\em{dribbling}}, or {\em{combination}} as described in the introduction. The dynamics then advances the adiabatic frictionless flow in the floating Lagrangian layers over a further set of sub-steps. Hyperviscosity is applied next with further sub-stepping required for computational stability of the explicit discrete approximations. The energy loss from the momentum viscosity is calculate locally and is balanced by adding a local change to the temperature, referred to as {\em{frictional heating}}. This set of dynamics sub-steps is followed by the vertical remapping from Lagrangian to pressure layers. The remapping is required to provide layers consistent with the parameterization formulations. The vertical remapping sub-steps are required for stability if the Lagrangian layers become too thin.
+The forcing (physics tendency) from the parameterizations is passed to the dynamical core. If the physics and dynamics operate on different grids, the forcing is remapped here. The dynamics operates on a shorter time step the physics and is sub-stepped. The remapped forcing is applied to the dynamics state, saved from the end of the previous dynamics step, using either {\em{state-updating}}, {\em{dribbling}}, or {\em{combination}} as described in the introduction. The dynamics then advances the adiabatic frictionless flow in the floating Lagrangian layers over a further set of sub-steps. Hyperviscosity is applied next with further sub-stepping required for computational stability of the explicit discrete approximations. The energy loss from the momentum viscosity is calculate locally and is balanced by adding a local change to the temperature, referred to as {\em{frictional heating}}. This set of dynamics sub-steps is followed by the vertical remapping from Lagrangian to Eulerian reference layers. The remapping is required to provide layers consistent with the parameterization formulations. The vertical remapping sub-steps are required for stability if the Lagrangian layers become too thin.
 
-At the end of the dynamics, the state is saved to be used by the dynamics the next time step and is also passed to the physics, with a remapping if the dynamics and physics grids differ. At the beginning of the physics the difference in energy between this state and the state saved after the physics during the previous time step is the amount needed to be added or subtracted by the energy fixer. It represents the accumulation of all spurious sources from the dry mass correction, remappings between physics and dynamics, dynamical core, differing energy definitions (if present), hyerviscosity, and vertical remapping.
+At the end of the dynamics, the state is saved to be used by the dynamics the next time step and is also passed to the physics, with a remapping if the dynamics and physics grids differ. At the beginning of the physics the difference in energy between this state and the state saved after the physics during the previous time step is the amount needed to be added or subtracted by the energy fixer. It represents the accumulation of all spurious sources from the dry mass correction, remappings between physics and dynamics grids (if applicable), dynamical core, differing energy definitions (if present), hyerviscosity, and vertical remapping.
 
 
 
@@ -313,7 +313,7 @@ At the end of the dynamics, the state is saved to be used by the dynamics the ne
 \end{figure}
 
 
-We now define the following energy tendencies corresponding to itemized list in section \ref{subsec:spuriousE} with references to terms indicated in Figure \ref{fig:dAD}. We start just after the energy fixer which will be defined at the end.
+We now define the following energy tendencies corresponding to the itemized list in section \ref{subsec:spuriousE} with references to terms indicated in Figure \ref{fig:dAD}. We start just after the energy fixer which will be defined at the end.
 \begin{enumerate}
 %
 \item $\partial \gi{E}^{(param)}$: TE tendency due to parameterizations. In CAM the TE budget for each parameterization is closed (assuming pressure is unchanged) so $\partial \gi{E}^{(param)}$ is balanced by net fluxes in/out of the physics columns. Note that this is the only energy tendency that is not spurious since CAM parameterizations have a closed TE budget. This TE tendency is discretely computed as
@@ -393,12 +393,12 @@ In CAM-SE there are 3 physics-dynamics coupling algorithms described in detail i
 %\end{equation}
 %If the same energy definition is used in the physics and dynamical core, and an energy conservative physics dynamics coupling method is used, then $\partial \gi{E}_{phys}^{({param})}$.
 
-\item $\partial \gi{E}^{({efix})}$: Global energy fixer tendency, defined in \eqref{efix.def} is applied at the beginning of the parameterizations. The correction needed is the global average difference between the state passed from the dynamics and the state that was saved after the physics updated the state  but before the dry mass correction. It includes all spurious sources from the dry mass correction, remappings between physics and dynamics, dynamical core, differing energy definitions (if present), hyerviscosity, and vertical remapping.
+\item $\partial \gi{E}^{({efix})}$: Global energy fixer tendency, defined in \eqref{efix.def}, is applied at the beginning of the parameterizations. The correction needed is the global average difference between the state passed from the dynamics and the state that was saved after the physics updated the state  but before the dry mass correction. It includes all spurious sources from the dry mass correction, remappings between physics and dynamics, dynamical core, differing energy definitions (if present), hyperviscosity, and vertical remapping.
 
 \end{enumerate}
 
 \subsection{A few observations regarding the energy budget terms}
-It is useful to note that the energy fixer `fixes' energy dissipation for the dynamical core, pressure work, physics-dynamics coupling errors and TE discrepancy errors
+It is useful to note that the energy fixer `fixes' energy errors for the dynamical core, pressure work, physics-dynamics coupling and TE discrepancy
 \begin{equation}
 \label{eq:budget_efix}
 -\partial \gi{E}_{phys}^{({efix})}=\partial \gi{E}_{phys}^{({pwork})}+\partial \gi{E}_{dyn}^{({adiab})}+\partial \gi{E}^{({pdc})}+\partial \gi{E}^{({discr})}.
@@ -456,7 +456,7 @@ Descriptor & $\mathcal{N}$ & {\tt{lcp\_moist}} &  {\tt{ftype}}  & $\partial \gi{
 \label{sec:results}
 A series of simulations have been performed with CESM2.1 using CAM version 6 (CAM6) physics (\url{https://doi.org/10.5065/D67H1H0V}) on NCAR's Cheyenne cluster \citep{cheyenne}. All simulations are at nominally $\sim1^{\circ}$ horizontal resolution (for CAM-SE that is 30$\times$30 elements on each cubed-sphere face and for CAM-FV its 192$\times$288 latitudes-longitudes) and using the standard 32 levels in the vertical. Unless otherwise noted all simulations are 13 months in duration and the last 12 months are used in the analysis. Total energy budgets are summarized in Table \ref{table:TE} and discussed below. The first column gives identifying `Descriptors' which are briefly summarized below and defined in more detail in the following sections. The section titles also include the `Descriptor' from Table \ref{table:TE} to make it easier for the reader to match Table entries with discussion in the text. Important changes to TE errors are marked with bold font in Table \ref{table:TE}.
 
-Various configurations are used and referred to in terms of the $COMPSET$ (Component Set) value used in CESM2.1 The $COMPSET$ {\em{F2000climo}} configuration refers to `real-world' AMIP (Atmospheric Model Intercomparison Project) type simulations using perpetual year 2000 SST (Sea Surface Temperature) boundary conditions. The first 7 simulations in the table (those above the horizontal line) are such AMIP-type simulations (F2000climo) with the first serving as a control for the 6 following variants. The remaining 5 simulation descriptors (below the horizontal line) list their $COMPSET$ or dynamical core settings.
+Various configurations are used and referred to in terms of the $COMPSET$ (Component Set) value used in CESM2.1 The $COMPSET$ {\em{F2000climo}} configuration refers to `real-world' AMIP (Atmospheric Model Intercomparison Project) type simulations using perpetual year 2000 SST (Sea Surface Temperature) boundary conditions. The first 7 simulations in the table (those above the horizontal line) are such AMIP-type simulations (F2000climo) with the first serving as a control for the 6 following variants. The remaining 5 simulation descriptors (below the horizontal line in Table \ref{table:TE}) list their $COMPSET$ or dynamical core settings.
 
 \begin{itemize}
 \item {\em{TE consistent}}: The TE consistent version uses {\em{state update}} physics-dynamics coupling ({\tt{ftype 1}}) described in section \ref{sec:consistent},
@@ -465,7 +465,7 @@ Various configurations are used and referred to in terms of the $COMPSET$ (Compo
 \item {\em{vert limiter}}: as {\em{TE consistent}} but using limiters in the vertical remapping of momentum (section \ref{sec:ppm}),
 \item {\em{smooth topo}}: as {\em{TE consistent}} but  using smoother topography (see section \ref{sec:topo}),
 \item {\em{energy discr}}: The version with energy discrepancy (but no physics-dynamics coupling errors) described in section \ref{sec:ediscr},
-\item {\em{default}}: as {\em{energy discr}} version with {\tt{ftype=2}} which is the current default CAM-SE (section \ref{sec:ediscr}),
+\item {\em{default}}: as {\em{energy discr}} version but with {\tt{ftype=2}} which is the current default CAM-SE (section \ref{sec:ediscr}),
 \item {\em{QPC6}}: A simplified aqua-planet setup based on the {\em{TE consistent}}, i.e an aqua-planet setup using CAM6 physics; an ocean covered planet in perpetual equinox, with fixed, zonally symmetric sea surface temperatures \citep{NH2000ASL,MWO2016JAMES} (section \ref{sec:QPC6}), 
 \item {\em{FSH94}}: Dry dynamical core configuration based on Held-Suarez forcing which relaxes temperature to a zonally symmetric equilibrium temperature profile and simple linear drag at the lower boundary \citep{HS1994BAMS} (section \ref{sec:FHS94}),. 
 \item {\em{FV}}: A configuration with the SE dynamical core replaced with the finite-volume core (section \ref{sec:cam-fv}), and
@@ -578,7 +578,7 @@ A detailed total energy (TE) analysis of the Community Atmosphere Model (CAM) us
 
 In CAM physics the parameterizations have, by design, a closed energy budget (change in TE is balanced by fluxes in/out the top and bottom of physics columns) if it is assumed that pressure is not modified. However, the pressure changes due to fluxes of mass (e.g., water vapor) in/out of the column which changes energy (referred to as pressure work). The pressure work with the full moist physics configuration is very stable across different configurations at $\sim 0.3W/m^2$. The TE errors in the spectral element (SE) dynamical core varies across configurations. Aspects that influence TE is the presence of topography, the amount of topography smoothing and moist physics. By smoothing topography more the TE error is cut in half from $\sim -0.6W/m^2$ to $\sim -0.3W/m^2$; and reduces by a factor of five ($\sim-0.1W/m^2$) if no topography is present at all (aqua-planet configuration). Moist physics forcing also contributes significantly to the TE budget. For example, in the dry Held-Suarez setup TE dissipation of the SE dynamical core reduces to $-0.03W/m^2$. Topography and moist physics force the dynamical core at the grid scale and hence the viscosity operators are more active. Consistent with this statement is that the changes in TE discussed so far are almost entirely due to the viscosity operator TE dissipation. For CAM-SE the spurious TE dissipation in the adiabatic dynamical core is $\sim-0.6W/m^2$ in `real-world' configurations. For comparison, CAM-FV's spurious TE change due to the adiabatic dynamical core is $\sim-1W/m^2$. 
 
-By further breaking down the TE dissipation in the SE dynamical core it is observed the vertical remapping accounts for only $\sim-0.01W/m^2$. That said, if the shape-preserving limiters in the vertical remapping are invoked the TE dissipation increases 20-fold to $\sim-0.2W/m^2$. In CAM-SE the kinetic energy dissipation is added as heating in the thermodynamic equation (also referred to as frictional heating). The frictional heating remains very stable across configurations that include moisture ($\sim 0.5W/m^2$) and reduces drastically for dry atmosphere setups (factor 4 reduction to ($\sim 0.12W/m^2$)). Hence this term is an important term in the TE budget. The TE budget for the dynamical core is dominated by TE change due to hyperviscosity; TE errors due to time-truncation and frictionless equations of motion are negligible. Errors associated with physics-dynamics coupling (if applicable) are approximately $0.5W/m^2$. Due to the evolutionary nature of model development the SE dynamical core's continuous equation of motion conserve a more comprehensive TE compared to the physical parameterizations. This TE discrepancy leads to an approximately $0.5W/m^2$ total energy source. Running physics on a different grid than the dynamical introduces TE mapping errors such as in CAM-SE-CSLAM (Conservative Semi-Lagrangian Multi-tracer transport scheme). These errors are, however, rather small $-0.007W/m^2$.
+By further breaking down the TE dissipation in the SE dynamical core it is observed the vertical remapping accounts for only $\sim-0.01W/m^2$. That said, if the shape-preserving limiters in the vertical remapping are invoked the TE dissipation increases 20-fold to $\sim-0.2W/m^2$. In CAM-SE the kinetic energy dissipation is added as heating in the thermodynamic equation (also referred to as frictional heating). The frictional heating remains very stable across configurations that include moisture ($\sim 0.5W/m^2$) and reduces drastically for dry atmosphere setups (factor 4 reduction to ($\sim 0.12W/m^2$)). Hence this term is an important term in the TE budget. The TE budget for the dynamical core is dominated by TE change due to hyperviscosity; TE errors due to time-truncation and frictionless equations of motion are negligible. Errors associated with physics-dynamics coupling (if applicable) are approximately $0.5W/m^2$. Due to the evolutionary nature of model development the SE dynamical core's continuous equation of motion conserve a more comprehensive TE compared to the physical parameterizations. This TE discrepancy leads to an approximately $0.5W/m^2$ total energy source. Running physics on a different grid than the dynamical introduces TE mapping errors such as in CAM-SE-CSLAM (Conservative Semi-Lagrangian Multi-tracer transport scheme). These errors are, however, rather small $-0.07W/m^2$.
 
 A purpose of this paper is to better understand the energy characteristics of CAM and to encourage modeling groups to perform similar analysis to better understand the total energy flow in the atmospheric component of Earth system models. As has been demonstrated in this paper there can easily be compensating errors in the system which can not be identified without a detailed TE analysis.
 
@@ -752,7 +752,7 @@ A purpose of this paper is to better understand the energy characteristics of CA
 \acknowledgments
 The National Center for Atmospheric Research is sponsored by the National Science Foundation. Computing resources ({\url{doi:10.5065/D6RX99HX}}) were provided by the Climate Simulation Laboratory at NCAR's Computational and Information Systems Laboratory, sponsored by the National Science Foundation and other agencies. The data used to perform the energy analysis can be found at {\url{https://github.com/PeterHjortLauritzen/2018-JAMES-energy}}.
 
-%We thank two anonymous reviewers for their helpful comments and time put into reviewing this very long/technical paper. Herrington, Reed and Lauritzen are grateful to the NCAR Advance Study Program graduate visitor program for funding Herrington's 9-month visit to NCAR. We thank NCAR's Computational and Information Systems Lab (CISL) for providing computing support. Goldhaber was partially supported by the U.S. Department of Energy Office of Biological and Environmental Research, Work Package 12-015334 ``Multiscale Methods for Accurate, Efficient, and Scale-Aware Models of the Earth System''. Medeiros acknowledges support by the Regional and Global Climate Modeling Program of the U.S. Department of Energy's Office of Science,  Cooperative Agreement DE-FC02-97ER62402. Benedict was funded by National Science Foundation (NSF) Rapid Response Research (RAPID) award AGS-1547910. The data presented in this manuscript is available at {\url{https://github.com/PeterHjortLauritzen/2017-JAMES-CESM2-SE.git}}.
+
 
 %% ------------------------------------------------------------------------ %%
 %% Citations
