--- a/src/bib.bib
+++ b/src/bib.bib
@@ -252,7 +252,6 @@ note = {submitted},
 archivePrefix = "arXiv",
    eprint = {1605.06480},
  primaryClass = "physics.ao-ph",
- keywords = {Physics - Atmospheric and Oceanic Physics},
      year = 2016,
     month = may,
    adsurl = {http://adsabs.harvard.edu/abs/2016arXiv160506480G},
@@ -658,7 +657,7 @@ year = {2015},
 
 @article {GRL:GRL14999,
 author = {Khairoutdinov, Marat F. and Randall, David A.},
-title = {A cloud resolving model as a cloud parameterization in the NCAR Community Climate System Model: Preliminary results},
+title = {A cloud resolving model as a cloud parameterization in the {NCAR} {C}ommunity {C}limate {S}ystem {M}odel: {P}reliminary results},
 journal = {Geophysical Research Letters},
 volume = {28},
 number = {18},
@@ -929,7 +928,7 @@ pages={195-221},
 
 @article {RJ2012JAMES,
 author = {Kevin A.  Reed and Christiane Jablonowski},
-title = {Idealized tropical cyclone simulations of intermediate complexity: A test case for AGCMs},
+title = {Idealized tropical cyclone simulations of intermediate complexity: A test case for {AGCM}s},
 journal = {Journal of Advances in Modeling Earth Systems},
 volume = {4},
 number = {2},
@@ -4334,10 +4333,9 @@ doi = {10.1175/1520-0493(1997)125<2293:ROTBSC>2.0.CO;2},
 }
 
 @Inbook{JW2010LNCSE,
-author="Jablonowski, Christiane
-and Williamson, David L.",
+author="Jablonowski, Christiane and Williamson, David L.",
 editor="Lauritzen, Peter Hjort and Jablonowski, Christiane and Taylor, Mark and Nair, Ramachandran",
-title="The Pros and Cons of Diffusion, Filters and Fixers in Atmospheric General Circulation Models",
+chapter="The Pros and Cons of Diffusion, Filters and Fixers in Atmospheric General Circulation Models",
 bookTitle="Numerical Techniques for Global Atmospheric Models",
 year="2011",
 publisher="Springer Berlin Heidelberg",
@@ -4361,7 +4359,7 @@ url="https://doi.org/10.1007/978-3-642-11640-7_13"
   pages = 	 {357-380},
   OPTmonth = 	 {},
   OPTnote = 	 { },
-  DOI = 	 {10.1007/978-3-642-11640-7\_12}
+  DOI = 	 {10.1007/978-3-642-11640-7_12}
 }
 
 @Article{T2010LNSCE,
@@ -7577,7 +7575,7 @@ DOI = {10.5194/gmd-9-2007-2016}
 
 @article {NH2000ASL,
 author = {Neale, R. B. and Hoskins, B. J.},
-title = {A standard test for AGCMs including their physical parametrizations: I: the proposal},
+title = {A standard test for {AGCM}s including their physical parametrizations: I: the proposal},
 journal = asl,
 volume = {1},
 number = {2},
@@ -7795,6 +7793,7 @@ year={1991},
 pages={469–485},
 }
 
+
 @article{THO2006GRL,
 title={Explicit global simulation of the mesoscale spectrum of atmospheric motions},
 volume={33},
@@ -7960,7 +7959,7 @@ DOI = {10.5194/gmd-2017-293}
 
 @article {LetAl2018JAMES,
 author = {Peter H. Lauritzen and R.D. Nair and  A.R. Herrington and P. Callaghan and S. Goldhaber and J.M. Dennis and  Julio T. Bacmeister and  B. Eaton and  C.M. Zarzycki and  Mark A. Taylor and A. Gettelman and   R.B. Neale and  B. Dobbins and  K.A. Reed and T. Dubos},
-title = {NCAR release of CAM-SE in CESM2.0: A reformulation of the spectral-element dynamical core in dry-mass vertical coordinates with comprehensive treatment of condensates and energy},
+title = {{NCAR} release of {CAM}-{SE} in {CESM}2.0: A reformulation of the spectral-element dynamical core in dry-mass vertical coordinates with comprehensive treatment of condensates and energy},
 journal = james,
 volume = {},
 number = {},
@@ -8035,16 +8034,17 @@ year={2006},
 pages={3610-3624},
 }
 
-@inbook{B2000S,
-        Author = {B.A. Boville},
-        Chapter = {Toward a complete model of the climate system, in Numerical Modeling of the Global Atmosphere in the Climate System},
-        Edition = {First},
-        Pages = {419-442},
-        Publisher = {Springer Netherlands},
-        Title = {Numerical Modeling of the Global Atmosphere in the Climate System},
-        Editors = {P. Mote and A. O'Neill},
-        Year = {2000}
+
+@Inbook{B2000S,
+author = {B.A. Boville},
+editor = {P. Mote and A. O'Neill},
+chapter = {Toward a complete model of the climate system in {N}umerical {M}odeling of the {G}lobal {A}tmosphere in the {C}limate {S}ystem},
+bookTitle = {Numerical Modeling of the Global Atmosphere in the Climate System},
+year = {2000},
+publisher = {Springer Netherlands},
+pages = {419-442}
 }
+
 
 @article{HetAl2018MWR,
 title={Physics-dynamics coupling with element-based high-order {G}alerkin methods: quasi equal-area physics grid},
@@ -8087,15 +8087,8 @@ year = {2018},
 doi = {10.1175/JCLI-D-17-0838.1}
 }
 
-
-
-
-
-
-
-
 @article{GetAl2018MWR,
-author = {Gross, Markus and Wan, Hui and Rasch, Philip J. and Caldwell, Peter M. and Williamson, David L. and Klocke, Daniel and Jablonowski, Christiane and Thatcher, Diana R. and Wood, Nigel and Cullen, Mike and Beare, Bob and Willett, Martin and Lemarié, Florian and Blayo, Eric and Malardel, Sylvie and Termonia, Piet and Gassmann, Almut and Lauritzen, Peter H. and Johansen, Hans and Zarzycki, Colin M. and Sakaguchi, Koichi and Leung, Ruby},
+author = {Gross, Markus and Wan, Hui and Rasch, Philip J. and Caldwell, Peter M. and Williamson, David L. and Klocke, Daniel and Jablonowski, Christiane and Thatcher, Diana R. and Wood, Nigel and Cullen, Mike and Beare, Bob and Willett, Martin and Lemari\'e, Florian and Blayo, Eric and Malardel, Sylvie and Termonia, Piet and Gassmann, Almut and Lauritzen, Peter H. and Johansen, Hans and Zarzycki, Colin M. and Sakaguchi, Koichi and Leung, Ruby},
 title = {Physics-Dynamics Coupling in weather, climate and Earth system models: Challenges and recent progress},
 journal = mwr,
 volume = {146},
